# wish-with-me-codex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  docker-compose.montreal.yml  docker-compose.prod.yml  docker-compose.ubuntu.yml  docker-compose.yml
services/core-api/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
services/core-api/alembic/: env.py
services/core-api/alembic/versions/: 001_initial_schema.py  002_add_wishlists_items.py  003_add_user_birthday.py  004_add_sharing_marks_notifications.py  005_add_shared_wishlist_bookmarks.py  006_drop_notifications_table.py  007_add_wishlist_icon.py
services/core-api/app/: broker.py  config.py  couchdb.py  database.py  db.py  dependencies.py  deps.py  idempotency.py  main.py  redis.py  redis_client.py  schemas.py  security.py  utils.py  visibility.py
services/core-api/app/clients/: __init__.py  item_resolver.py
services/core-api/app/models/: __init__.py  bookmark.py  item.py  mark.py  notification.py  share.py  user.py  wishlist.py
services/core-api/app/oauth/: __init__.py  providers.py  schemas.py
services/core-api/app/routers/: __init__.py  auth.py  auth_couchdb.py  (+13 more)
services/core-api/tests/: __init__.py  conftest.py  test_api_spec.py  test_auth.py  test_auth_couchdb.py  test_bookmark.py  test_health.py  test_item_resolver_client.py  test_items.py  test_mark.py  test_oauth.py  test_security.py  test_share.py  test_shared.py  test_sync.py  test_sync_couchdb.py  test_users.py  test_wishlists.py
(+178 files in other folders)
